@@ -1,3 +1,6 @@
+* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 3.9.0
+- Add AlmaLinux 8 support
+
 * Mon Jul 17 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 3.8.0
 - Add RockyLinux 8 support
 
